src/styles.css
@font-face {
  font-family: "Roboto";
  src: url('./assets/fonts/Roboto-Regular.ttf');
}

@font-face {
  font-family: "Roboto";
  font-weight: bold;
  src: url("./assets/fonts/Roboto-Bold.ttf");
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  height: 100vh;
}

h1 {
  font-size: 3rem;
}

ul {
  padding: 0;
}

button,
input {
  font-size: 1rem;
  height: 3rem;
  border-radius: 10px;
}

button {
  font-weight: bold;
  width: 100%;
  margin-top: 20px;
  background-color: hsl(234, 29%, 20%);
  border: none;
  color: hsl(0, 0%, 100%);
}

button:hover {
  background-image: linear-gradient(to right, hsl(347, 95%, 66%), hsl(13, 96%, 62%));
  cursor: pointer;
}

.newsletter-wrapper {
  max-width: 1440px;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: hsl(235, 18%, 26%);
}

.newsletter-sign-up, 
.success-message {
  background-color: hsl(0, 0%, 100%);
}

.newsletter-sign-up {
  display: flex;
  padding: 20px;
  border-radius: 20px;
}

.content {
  padding: 40px;
  max-width: 450px;
  border-radius: 20px;
}

.content ul {
  list-style-type: none;
}

.content li::before {
  content: url("./assets/images/icon-list.svg");
  position: relative;
  top: 4px;
  margin-right: 10px;
}

.form-guidance {
  margin-bottom: 10px;
  font-weight: bold;
  font-size: 12px;
  display: flex;
  justify-content: space-between;
}

.error {
  color: hsl(0, 98%, 68%);
}

div.error {
  visibility: hidden;
}


.content form {
  display: flex;
  flex-direction: column;
}

.content form input {
  padding-left: 1rem;
  border: 1px solid hsl(231, 7%, 60%);
}

.content form input:hover {
  cursor: pointer;
}  

.content input.error {
  background-color: hsl(5, 92%, 95%);
  border: 1px solid hsl(0, 98%, 68%);
}

.content li {
  line-height: 2;
}

.hidden {
  display: none;
}

@media (max-width: 700px) {
  .newsletter-wrapper {
    background-color: hsl(0, 0%, 100%);
  }

  .newsletter-sign-up {
    flex-direction: column-reverse;
    padding: 0;
  }

  .content + img {
    content: url("./assets/images/illustration-sign-up-mobile.svg");
  }
}

